[package]
name = "tikv-client"
version = "0.0.0"
keywords = ["TiKV", "KV", "distributed-systems"]
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "The rust language implementation of TiKV client."
edition = "2018"

[features]
default = []
# Enable integration tests with a running TiKV and PD instance.
# Use $PD_ADDRS, comma separated, to set the addresses the tests use. 
integration-tests = []

[lib]
name = "tikv_client"

[dependencies]
async-trait = "0.1.42"
derive-new = "0.5.9"
fail = "0.4.0"
futures = { version = "0.3.13", features = ["async-await", "thread-pool"] }
futures-timer = "3.0.2"
grpcio = { version = "0.8.0", features = [ "secure", "prost-codec", "use-bindgen" ], default-features = false }
lazy_static = "1.4.0"
log = "0.4.14"
prometheus = { version = "0.11.0", features = [ "push", "process" ], default-features = false } 
rand = "0.8.3"
regex = "1.4.3"
serde = "1.0.123"
serde_derive = "1.0.123"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = [ "sync", "time" ] }

tikv-client-common = { path = "tikv-client-common" }
tikv-client-pd = { path = "tikv-client-pd" }
tikv-client-proto = { path = "tikv-client-proto" }
tikv-client-store = { path = "tikv-client-store" }
mock-tikv = {path = "mock-tikv"}


[dev-dependencies]
clap = "2.32"
fail = { version = "0.4", features = [ "failpoints" ] }
proptest = "0.10"
proptest-derive = "0.2"
serial_test = "0.5.0"
simple_logger = "1.9.0"
tokio = { version = "1.2.0", features = [ "sync", "rt-multi-thread", "macros" ] }

[workspace]
members = [
    "tikv-client-common",
    "tikv-client-pd",
    "tikv-client-proto",
    "tikv-client-store",
    "mock-tikv"
]

[[test]]
name = "failpoints_tests"
path = "tests/failpoints_tests.rs"
required-features = ["fail/failpoints"]
